# ChangeLog for xfce-extra/xfce4-notes
# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-notes/Attic/ChangeLog,v 1.66 2009/03/16 14:45:47 angelos Exp $

  16 Mar 2009; Christoph Mende <angelos@gentoo.org>
  xfce4-notes-1.6.4.ebuild:
  Moved xfce4_panel_plugin down to avoid overwriting dependencies

*xfce4-notes-1.6.4 (10 Mar 2009)

  10 Mar 2009; Christoph Mende <angelos@gentoo.org>
  +xfce4-notes-1.6.4.ebuild:
  Version bump

  09 Feb 2009; Christoph Mende <angelos@gentoo.org>
  -xfce4-notes-1.6.2.ebuild:
  Removed old

  04 Feb 2009; Raúl Porcel <armin76@gentoo.org> xfce4-notes-1.6.3.ebuild:
  arm/ia64/sparc stable wrt #254440

  25 Jan 2009; Tobias Klausmann <klausman@gentoo.org>
  xfce4-notes-1.6.3.ebuild:
  Stable on alpha, bug #254440

  21 Jan 2009; Jeroen Roovers <jer@gentoo.org> xfce4-notes-1.6.3.ebuild:
  Stable for HPPA (bug #254440).

  18 Jan 2009; Markus Meier <maekke@gentoo.org> xfce4-notes-1.6.3.ebuild:
  x86 stable, bug #254440

  13 Jan 2009; Brent Baude <ranger@gentoo.org> xfce4-notes-1.6.3.ebuild:
  Marking xfce4-notes-1.6.3 ppc64 and ppc for bug 254440

  12 Jan 2009; Jeremy Olexa <darkside@gentoo.org> xfce4-notes-1.6.3.ebuild:
  amd64 stable, bug 254440

*xfce4-notes-1.6.3 (22 Nov 2008)

  22 Nov 2008; Christoph Mende <angelos@gentoo.org>
  +xfce4-notes-1.6.3.ebuild:
  Version bump

  08 Nov 2008; Christoph Mende <angelos@gentoo.org>
  -xfce4-notes-1.6.0.ebuild, -xfce4-notes-1.6.1.ebuild,
  xfce4-notes-1.6.2.ebuild:
  Remove old and add empty IUSE

  26 Sep 2008; Jeroen Roovers <jer@gentoo.org> xfce4-notes-1.6.2.ebuild:
  Stable for HPPA (bug #235407).

  27 Aug 2008; Raúl Porcel <armin76@gentoo.org> xfce4-notes-1.6.2.ebuild:
  alpha/ia64 stable wrt #235407

  24 Aug 2008; Markus Rothe <corsair@gentoo.org> xfce4-notes-1.6.2.ebuild:
  Stable on ppc64; bug #235407

  24 Aug 2008; Friedrich Oslage <bluebird@gentoo.org>
  xfce4-notes-1.6.2.ebuild: