@@ -1,0 +1,12 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-notes/Attic/xfce4-notes-1.7.0.ebuild,v 1.1 2009/06/19 16:14:20 ssuominen Exp $
+
+inherit xfce4
+
+DESCRIPTION="Xfce4 panel sticky notes plugin"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd"
+IUSE=""
+DOCS="AUTHORS ChangeLog NEWS README"
+
+xfce4_panel_plugin
